--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
             <button id="contact-btn">Contact</button>
         </nav>
         <div class="banner">
-
+            <div class="banner-content">
+                <h1><span id="empowering">Empowering</span>
+                    <br>
+                    students from small age <span id="towards-vision">towards vision</span></h1>
+                    <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                    <button>Enroll Now</button>
+            </div>
+            <div class="banner-img">
+                <img src="assets/hero-kids.png" alt="">
+            </div>
         </div>
     </header>
     <main>
@@ -33,5 +42,6 @@
     <footer>
 
     </footer>
+    
 </body>
 </html>
