--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="" id="home">Home</a></li>
                     <li><a href="" id="about">About</a></li>
-                    <li><a href="" id="falilities">Facilities</a></li>
+                    <li><a href="" id="facilities">Facilities</a></li>
                     <li><a href="" id="admission">Admission</a></li>
                 </ul>
             </div>
@@ -27,7 +27,8 @@
             <div class="banner-content">
                 <h1><span id="empowering">Empowering</span>
                     <br>
-                    students from small age <span id="towards-vision">towards vision</span></h1>
+                    students from small
+                    <br> age <span id="towards-vision">towards vision</span></h1>
                     <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
                     <button>Enroll Now</button>
             </div>
@@ -42,6 +43,6 @@
     <footer>
 
     </footer>
-    
+
 </body>
 </html>
