--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <title>My Second Assignment</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
 </head>
 <body>
     <header>
@@ -22,6 +23,7 @@
                 </ul>
             </div>
             <button id="contact-btn">Contact</button>
+            <i id="menu-icon" class="fa-solid fa-bars"></i>
         </nav>
         <div class="banner">
             <div class="banner-content">
@@ -38,7 +40,42 @@
         </div>
     </header>
     <main>
-        
+        <section class="classes">
+            <h2>Standard Curriculum</h2>
+            <div class="card-sec">
+                <div class="card1">
+                    <img src="assets/kinder.png" alt="">
+                    <h4>Kinder (3-6) Years</h4>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient
+                    </p>
+                    <button>Read More</button>
+                </div>
+                <div class="card2">
+                    <img src="assets/elementary.png" alt="">
+                    <h4>Elementary School</h4>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient
+                    </p>
+                    <button>Read More</button>
+                </div>
+                <div class="card3">
+                    <img src="assets/middle.png" alt="">
+                    <h4>Middle (10-16) Years</h4>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient
+                    </p>
+                    <button>Read More</button>
+                </div>
+            </div>
+        <div class="btn">
+            <button class="arrow"><p><i class="fa-solid fa-less-than"></i></p></button>
+            <button class="arrow"><p><i class="fa-solid fa-greater-than"></i></p></button>
+        </div>
+        </section>
     </main>
     <footer>
 
