--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
 </head>
 <body>
+    <div class="body">
     <header>
         <nav class="navbar">
             <div class="logo">
@@ -76,10 +77,58 @@
             <button class="arrow"><p><i class="fa-solid fa-greater-than"></i></p></button>
         </div>
         </section>
+        <section class="stories">
+            <h2 class="stories-heading">Our Stories</h2>
+            <div class="stories-card-sec">
+                <div class="big-card">
+                <div class="stories-card1">
+                    <img src="assets/story-1.png" alt="">
+                    <div class="stories-content"><button>November 19, 2019</button>
+                    <h4>A fun toddler coloring training on
+                        classroom</h4>
+                    <p>Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="small-card">
+                <div class="stories-card2 bg-color-radius">
+                    <img src="assets/story-1.png" alt="">
+                    <div class="stories-content"><button>November 19, 2019</button>
+                    <h5>Find out if a school fits the
+                        family’s needs</h5>
+                    </div>
+                </div>
+                <div class="stories-card3 bg-color-radius">
+                    <img src="assets/story-1.png" alt="">
+                    <div class="stories-content"><button>November 19, 2019</button>
+                    <h5>Summer math & literacy
+                        centres for kids</h5>
+                    </div>
+                </div>
+                <div class="stories-card4 bg-color-radius">
+                    <img src="assets/story-1.png" alt="">
+                    <div class="stories-content"><button>November 19, 2019</button>
+                    <h5>Classroom management
+                        techniques for new tutors</h5>
+                    </div>
+                </div>
+                <div class="stories-card5 bg-color-radius">
+                    <img src="assets/story-1.png" alt="">
+                    <div class="stories-content"><button>November 19, 2019</button>
+                    <h5>Conversation rhymes
+                        improve kids listening</h5>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <button>View All</button>
+        </section>
     </main>
     <footer>
 
     </footer>
-
+</div>
 </body>
 </html>
