--- a/index.html
+++ b/index.html
@@ -94,29 +94,43 @@
             </div>
             <div class="small-card">
                 <div class="stories-card2 bg-color-radius">
-                    <img src="assets/story-1.png" alt="">
+                    <img src="assets/story-2.png" alt="">
                     <div class="stories-content"><button>November 19, 2019</button>
                     <h5>Find out if a school fits the
                         family’s needs</h5>
                     </div>
                 </div>
                 <div class="stories-card3 bg-color-radius">
-                    <img src="assets/story-1.png" alt="">
+                    <img src="assets/story-3.png" alt="">
                     <div class="stories-content"><button>November 19, 2019</button>
                     <h5>Summer math & literacy
                         centres for kids</h5>
                     </div>
                 </div>
                 <div class="stories-card4 bg-color-radius">
-                    <img src="assets/story-1.png" alt="">
-                    <div class="stories-content"><button>November 19, 2019</button>
+                    <img src="assets/story-4.png" alt="">
+                    <div class="stories-content"><button>August 17, 2019</button>
+                    <h5>Classroom management
+                        techniques for new tutors</h5>
+                    </div>
+                </div>
+                <div class="stories-card4 bg-color-radius response">
+                    <img src="assets/story-4.png" alt="">
+                    <div class="stories-content"><button>August 17, 2019</button>
+                    <h5>Classroom management
+                        techniques for new tutors</h5>
+                    </div>
+                </div>
+                <div class="stories-card4 bg-color-radius response">
+                    <img src="assets/story-4.png" alt="">
+                    <div class="stories-content"><button>August 17, 2019</button>
                     <h5>Classroom management
                         techniques for new tutors</h5>
                     </div>
                 </div>
                 <div class="stories-card5 bg-color-radius">
-                    <img src="assets/story-1.png" alt="">
-                    <div class="stories-content"><button>November 19, 2019</button>
+                    <img src="assets/story-5.png" alt="">
+                    <div class="stories-content"><button>July 10, 2019</button>
                     <h5>Conversation rhymes
                         improve kids listening</h5>
                     </div>
