--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
 </head>
 <body>
-    <div class="body">
     <header>
         <nav class="navbar">
             <div class="logo">
@@ -78,6 +77,7 @@
         </div>
         </section>
         <section class="stories">
+            <div class="stories-sec">
             <h2 class="stories-heading">Our Stories</h2>
             <div class="stories-card-sec">
                 <div class="big-card">
@@ -137,12 +137,12 @@
                 </div>
             </div>
             </div>
-            <button>View All</button>
+             </div>
+        <button>View All</button>
         </section>
     </main>
     <footer>
 
     </footer>
-</div>
 </body>
 </html>
