--- a/index.html
+++ b/index.html
@@ -46,27 +46,21 @@
                 <div class="card1">
                     <img src="assets/kinder.png" alt="">
                     <h4>Kinder (3-6) Years</h4>
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient
+                    <p>Kindergarten is a year of early education for children who are at least five years old. It's a transitional period that prepares children for elementary school. 
                     </p>
                     <button>Read More</button>
                 </div>
                 <div class="card2">
                     <img src="assets/elementary.png" alt="">
                     <h4>Elementary School</h4>
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient
+                    <p>education for children, usually between the ages of 5 and 11. It's where children learn basic reading, writing, math, and science skills
                     </p>
                     <button>Read More</button>
                 </div>
                 <div class="card3">
                     <img src="assets/middle.png" alt="">
                     <h4>Middle (10-16) Years</h4>
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient
+                    <p>Middle school is a period of transition between elementary and high school, where students develop academically, socially
                     </p>
                     <button>Read More</button>
                 </div>
@@ -141,8 +135,35 @@
         <button>View All</button>
         </section>
     </main>
-    <footer>
-
+    <footer id="footer">
+        <div class="logo-sec">
+            <div class="logo-title">
+                <img src="assets/logo.png" alt="">
+                <h2>Kids <br>
+                    Education</h2>
+            </div>
+            <div class="logo-content">
+                <p>To get the children in your community learning right away, sign up for free and download the kids education app today.</p>
+            </div>
+        </div>
+        <div class="about-sec">
+            <h4>About School</h4>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Facilities</a></li>
+                <li><a href="">Admission</a></li>
+            </ul>
+        </div>
+        <div class="social-sec">
+            <h4>Keep In Touch</h4>
+            <div class="social-bar">
+                <a href=""><img src="assets/fb.png" alt=""></a>
+                <a href=""><img src="assets/dribble.png" alt=""></a>
+                <a href=""><img src="assets/twitter.png" alt=""></a>
+                <a href=""><img src="assets/google+.png" alt=""></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
