--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     Education</h2>
             </div>
             <div class="logo-content">
-                <p>To get the children in your community learning right away, sign up for free and download the kids education app today.</p>
+                <p>To get the children in your community <br> learning right away, sign up for free and <br> download the kids education app today.</p>
             </div>
         </div>
         <div class="about-sec">
