--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
 </head>
 <body>
+    <marquee behavior="" direction="left"
+    width="80%">In more economically developed countries, school systems can be structured in different ways. For instance, the schools in some countries, such as France and China, are organized by the national government. Other countries, such as the United States and Canada, organize their school systems at a more local level (the state and province, respectively).</marquee>
     <header>
         <nav class="navbar">
             <div class="logo">
