--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
 </head>
 <body>
-    
     <header>
+        <!-- nav section -->
         <nav class="navbar">
             <div class="logo">
                 <img src="assets/logo.png" alt="">
@@ -26,8 +26,12 @@
             <button id="contact-btn">Contact</button>
             <i id="menu-icon" class="fa-solid fa-bars"></i>
         </nav>
+
+        <!-- marquee -->
         <marquee behavior="" direction="left"
     width="80%">In more economically developed countries, school systems can be structured in different ways. For instance, the schools in some countries, such as France and China, are organized by the national government. Other countries, such as the United States and Canada, organize their school systems at a more local level (the state and province, respectively).</marquee>
+
+    <!-- banner section -->
         <div class="banner">
             <div class="banner-content">
                 <h1><span id="empowering">Empowering</span>
@@ -42,7 +46,9 @@
             </div>
         </div>
     </header>
+
     <main>
+        <!-- Curriculum section -->
         <section class="classes">
             <h2>Standard Curriculum</h2>
             <div class="card-sec">
@@ -73,6 +79,8 @@
             <button class="arrow"><p><i class="fa-solid fa-greater-than"></i></p></button>
         </div>
         </section>
+
+        <!-- stories section -->
         <section class="stories">
             <div class="stories-sec">
             <h2 class="stories-heading">Our Stories</h2>
@@ -135,9 +143,11 @@
             </div>
             </div>
              </div>
-        <button>View All</button>
-        </section>
+            <button>View All</button>
+        </section>    
     </main>
+
+    <!-- footer section -->
     <footer id="footer">
         <div class="logo-sec">
             <div class="logo-title">
